# th_logger

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
bench/: CMakeLists.txt
bench/src/: example_bench.cpp
cmake/: init.cmake
dev/doc/: Doxyfile  main.dox
dev/src/: log_level.cpp
include/: README.md
include/th_logger/: log_level.h  log_utils.h  logger.h  logger.hpp
test/: CMakeLists.txt
test/src/: test.cpp
